# deepstream-retinanet

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_ds61  Dockerfile_test  README.md  build_image.sh  docker-compose.yml
.cache/clangd/index/: PipelineHandler.cpp.B58795B057CE7732.idx  PipelineHandler.h.D5F79CD8ED542274.idx  activation_layer.cpp.4EF0C52B8B54360A.idx  activation_layer.h.CDAE1966220F251D.idx  alignment_logic.cpp.49BC90157A59FE59.idx  alignment_logic.h.98564FD628A9ECD7.idx  alignment_logic_kernel.cu.8A9D42834EFABC35.idx  app.cpp.758152F498A624D1.idx  app.h.CEE09DDA1C5B94CF.idx  appManager.cpp.6B34B79D6EF66FE3.idx  appManager.h.994323992FE0A628.idx  calibrator.cpp.488743A118E17D63.idx  calibrator.h.74D431B54362B617.idx  channels_layer.cpp.EB51952263D41C6F.idx  channels_layer.h.EBF23B3C58BF75DA.idx  convolutional_layer.cpp.81F69E710243C343.idx  convolutional_layer.h.2055DB0E73E197A5.idx  custom_schema.cpp.B9D7CBFFF778A8CD.idx  custom_schema.h.EA285E79F196BE8F.idx  custom_sink.hpp.9E2AFC4522A9CF96.idx  decode.h.A77ABEE9FEE21C92.idx  decode_plugin.h.6F099C398A17DF4D.idx  decode_plugin.h.AE3C3792B77476E0.idx  decode_plugin_kernel.cu.17CA65E20AEB398C.idx  decode_plugin_kernel.cu.FF5590B867C6B0B0.idx  (+69 more)
common/: common.h  helper_function.h  params.h  utils.cpp  utils.h
common/QDTConfig/: ConfigBase.cpp  DeepStreamAppConfig.h
common/QDTLog/: QDTLog.h
configs/: DsApp.conf  app.conf  app_conf.json  config_infer_primary_yoloV3.txt  config_infer_primary_yoloV5.txt  deepstream_app_config_yoloV3.txt  dstest2_pgie_config.txt  dstest2_sgie3_config.txt  faceid_align_config.txt  faceid_primary.txt  faceid_secondary.txt  mot_primary.txt  mot_sgie.txt  rtsp_source_list.json  rtsp_source_list_8.json  source_list.json  video_list.json
configs/faceid/: faceid_align_config.txt  faceid_primary.txt  faceid_secondary.txt  mot_primary.txt  mot_sgie.txt
configs/infer_meta/: dstensor_pgie_config.txt  dstensor_sgie1_config.txt  dstensor_sgie2_config.txt  dstensor_sgie3_config.txt
configs/samples/: dstest1_pgie_config.txt  dstest2_sgie1_config.txt  dstest2_sgie2_config.txt  dstest2_tracker_config.txt
configs/user_metadata/: dsmeta_pgie_config.txt
samples/: infer_meta.cpp  sample.h  test1.cpp  test2.cpp  user_metadata.cpp
script/: 0.00.00.119367904-gst-launch.NULL_READY.dot  0.00.00.121853548-gst-launch.NULL_READY.dot  0.00.00.123018308-gst-launch.NULL_READY.dot  0.00.00.123509458-gst-launch.NULL_READY.dot  0.00.00.124714093-gst-launch.NULL_READY.dot  0.00.00.127494818-gst-launch.NULL_READY.dot  0.00.00.138320029-gst-launch.NULL_READY.dot  0.00.00.146963225-gst-launch.NULL_READY.dot  0.00.00.149377458-gst-launch.NULL_READY.dot  0.00.00.149547813-gst-launch.NULL_READY.dot  0.00.00.159372090-gst-launch.NULL_READY.dot  0.00.00.165347501-gst-launch.NULL_READY.dot  0.00.00.249132033-gst-launch.error.dot  0.00.00.249315045-gst-launch.error.dot  0.00.00.254323733-gst-launch.error.dot  0.00.00.254454724-gst-launch.error.dot  0.00.00.254576033-gst-launch.error.dot  0.00.00.260710711-gst-launch.error.dot  0.00.00.269915895-gst-launch.error.dot  0.00.00.282140020-gst-launch.error.dot  0.00.00.289273567-gst-launch.error.dot  0.00.00.438117032-gst-launch.READY_PAUSED.dot  0.00.00.439948219-gst-launch.PAUSED_PLAYING.dot  0.00.00.463871416-gst-launch.READY_PAUSED.dot  0.00.00.466092539-gst-launch.PAUSED_PLAYING.dot  0.00.00.479838409-gst-launch.READY_PAUSED.dot  0.00.00.481804871-gst-launch.PAUSED_PLAYING.dot  0.00.05.843201885-gst-launch.PLAYING_PAUSED.dot  0.00.05.853390139-gst-launch.PLAYING_PAUSED.dot  0.00.05.872669753-gst-launch.PAUSED_READY.dot  0.00.05.881692682-gst-launch.PAUSED_READY.dot  0.00.05.884738670-gst-launch.PLAYING_PAUSED.dot  0.00.05.914030023-gst-launch.PAUSED_READY.dot  script.sh
src/: CMakeLists.txt  app.cpp  app.h  appManager.cpp  appManager.h  custom_sink.hpp  faceApp.cpp  faceApp.h  main.cpp
src/common/: app_struct.h  common.h  params.h  utils.cpp  utils.h
src/common/QDTConfig/: ConfigManager.h  DeepStreamAppConfig.cpp  DeepStreamAppConfig.h
src/deepsort/: CMakeLists.txt
src/facealignment/: CMakeLists.txt  alignment_logic.h  alignment_logic_kernel.cu  gstnvdsfacealign_allocator.h  gstnvfacealign.cpp  gstnvfacealign.h  nvdsfacealign_interface.h
src/facedetection/: CMakeLists.txt
src/facefeature/: onnx_to_trt.py
src/gstutils/: BufferProbe.cpp  BufferProbe.h  PipelineHandler.cpp  PipelineHandler.h  VideoSource.cpp  VideoSource.h  detection_postprocess.cpp  detection_postprocess.h  face_bin.cpp  face_bin.h  face_define.h
src/kafka_protocol_adaptor/: CMakeLists.txt  cfg_kafka.txt
src/mot/: gentrt.sh  mot_struct.h
src/nvdsinfer_custom_impl_Yolo/: CMakeLists.txt  calibrator.cpp  nvdsinfer_yolo_engine.cpp  nvdsparsebbox_Yolo.cpp  sortDetections.cu  yolo.cpp  yolo.h  yoloPlugins.cpp  yoloPlugins.h
src/nvdsinfer_custom_impl_Yolo/layers/: implicit_layer.cpp  route_layer.cpp
src/nvdsinfer_custom_impl_retinaface/: CMakeLists.txt  decode.cu  decode.h  decode_plugin_kernel.cu  retinaface.cpp  retinaface.h  trt_utils.h
src/nvdsinfer_custom_impl_retinaface/plugin/: checkMacrosPlugin.h  faceNMSPlugin.cpp  faceNMSPlugin.h  faceNMSPluginInference.cu  plugin.h
src/nvmsgconv/: CMakeLists.txt  custommeta_schema.h  nvmsgconv.cpp
src/nvmsgconv/custom_schema/: custom_schema.cpp  custom_schema.h  dsmeta_payload.cpp  eventmsg_payload.cpp  facemsg_payload.cpp
src/pipeline/: BufferProbe.cpp  BufferProbe.h  FaceBin.cpp  FaceBin.h  MOTBin.cpp  MOTBin.h  NvInferBinBase.cpp  NvInferBinBase.h  NvInferBinBaseProbe.cpp  NvInferBinConfigBase.h  NvInferFaceProbe.cpp  NvInferMOTProbe.cpp  PipelineHandler.cpp  PipelineHandler.h  face_bin.cpp  face_bin.h  face_probe.cpp  kafka_producer.cpp  kafka_producer.h  message.cpp  message.h  mot_bin.cpp  mot_bin.h  probe.cpp  probe.h  videoSource.cpp  videoSource.h
src/probe/: face_probe.cpp  mot_probe.cpp  probe.h  yolo_probe.cpp
src/resnet50_facedetection/: decode_plugin.h  decode_plugin_kernel.cu  nvds_retinaface.cpp
src/utils/: VideoSource.cpp  VideoSource.h  utils.h
tools/: convert_trt.sh  onnx_to_trt.py
(+4 files in other folders)
