# set(SRC_COMMON_DIR ${CMAKE_CURRENT_LIST_DIR}/common)

add_subdirectory(nvdsinfer_custom_impl_Yolo)
add_subdirectory(nvdsinfer_custom_impl_retinaface)
add_subdirectory(facedetection)
add_subdirectory(kafka_protocol_adaptor)
add_subdirectory(nvmsgconv)
add_subdirectory(facealignment)
add_subdirectory(facefeature)
add_subdirectory(deepsort)
add_subdirectory(nvdsinfer_customparser)
